--- a/README.Rmd
+++ b/README.Rmd
@@ -56,9 +56,7 @@ To facilitate the most efficient and timely analysis this is the information you
 
 For clarity, we will further define each part of the data package transferred. 
 
-
-\subsection{The raw data}
-\label{sec:rawdata}
+## The raw data
 
 It is critical that you include the rawest form of the data to which you have access. This ensures that data provenance can be maintained throughout the workflow.  Here are some examples of the raw form of data:
 
@@ -78,8 +76,7 @@ If you made any modifications to the raw data, it is not the raw form of the dat
 
 It can often help to consider what would happen if new data for a study were to arrive to the statistician. If this new data requires no modification before being combined with the first set of raw data provided, it is likely raw data. Reporting modified data as raw data is a very common way to slow down the analysis process, since the analyst will often have to do a forensic study of your data to figure out why the raw data looks weird.
 
-\subsection{The tidy data set}
-\label{sec:tidydata}
+## The tidy data set
 
 The general principles of tidy data have been laid out by Hadley Wickham previously [@_tidy_data]. While the paper describes tidy data using R [@_r], the principles are more generally applicable:
 
@@ -94,10 +91,8 @@ To provide an experimental example, suppose you want to know if individuals with
 
 With regards to the formatting of these data, if you are sharing your data with the collaborator in Excel, the tidy data should be in one Excel file per table. They should not have multiple worksheets, no macros should be applied to the data, and no cells should be highlighted. Alternatively, the data could be shared in either a CSV [_comma-separated_2017] or TAB-delimited text file [_tab-separated_2017]. Caution should always be taken when reading CSV files into Excel as it can sometimes lead to non-reproducible handling of date variables, time variables, and variables that Excel incorrectly assumes are date or time variables [@zeeberg_mistaken_2004]. For example, Excel incorrectly assumes the gene `SEPT9` is the date `Sept-9` due to  default date format conversions. Floating-point format conversions cause similar problems. To avoid these issues, use ISO 8601 [_iso_2017] guidelines when coding date and time variables. (See Box 1). Any time data is being formatted, the tidier must be extremely careful that no unintended alterations have been made. Spot checking data after tidying, which includes, but is not limited to, ensuring the correct number of columns and rows are present and that column labels are accurate and consistent across spreadsheets, is crucial. 
 
- 
-\subsection{The code book}
-\label{sec:codebook}
 
+## The code book
 For almost any data set, the measurements you calculate will need to be described in more detail than you can or should sneak into the spreadsheet. The code book (also referred to as a 'data dictionary') contains this information. At a minimum it should contain:
 
 1. Information about the variables (including units!) in the data set not contained in the tidy data.
@@ -108,8 +103,7 @@ In our blood example, the statistician would want to know what the unit of measu
 
 A common format for this document is a Word file. There should be a section called "Study design" that has a thorough description of the question being asked by the study as well as how you collected the data. An additional section called "Code book" should be provided to describe each variable and its units. This information is frequently conveyed most simply in tabular form. In this case, the columns of the table would contain columns including `VariableName`, `Description`, `Units`, `CodingNotes`, and `OtherNotes`. Further columns that provide additional information to the statistician should be included. (**Figure 1C**)
 
-\subsubsection{How to code variables}
-\label{sec:codevar}
+### How to code variables
 
 When you put variables into a spreadsheet there are several main categories you will run into depending on their data type [_statistical_2016]:
 
@@ -125,8 +119,7 @@ Explanations for the reasoning behind variable coding guidelines can be found in
 
 Always encode every piece of information about your observations using text. For example, if you are storing data in Excel and use a form of colored text or cell background formatting to indicate information about an observation ("red variable entries were observed in experiment 1.") then this information will not be exported (and will be lost!) when the data is exported as raw text.  Every piece of data should be encoded as actual text that can be exported.  
 
-\subsection{The instruction list}
-\label{sec:instruction}
+## The instruction list
 
 You may have heard this before, but reproducibility is a big deal in computational science [@peng_reproducible_2011]. To accomplish this goal, best practices have been discussed in detail previously [@wilson_good_2016]. However, for simplicity here, this means that when you submit your paper, the reviewers and the rest of the world should be able to exactly replicate the analyses from raw data all the way to final results.  If you are trying to be efficient, you will likely perform some summarization or data analysis steps before the data can be considered tidy and passed off to your statistician. 
 
@@ -140,8 +133,7 @@ Alternatively, in many cases, the person who collected the data may not know how
 
 You should also include information about which system (Mac/Windows/Linux) you used the software on, the specific version of any software used, and whether you tried it more than once to confirm it gave the same results. Ideally, you will run this by a fellow student or labmate to confirm that they can obtain the same output file you did. 
 
-\section{What you should expect from the analyst}
-\label{sec:expect}
+# What you should expect from the analyst
 
 When you turn over a properly tidied data set it dramatically decreases the workload on the statistician and minimizes the likelihood of errors during analysis. By taking the time to tidy the data, the data generator, who knows the details of the data generated better than anyone else, can expect to get the analysis back sooner and can be more confident in its accuracy. Careful statisticians will check your recipe, ask questions about steps you performed, and try to confirm that they can obtain the same tidy data that you did with, at minimum, spot checks.
 
@@ -153,19 +145,15 @@ You should then expect from the statistician:
 
 This is the information you will use in the supplement to establish reproducibility and precision of your results. Each of the steps in the analysis should be clearly explained and you should ask questions when you don't understand what the analyst did. It is the responsibility of both the statistician and the scientist to understand the statistical analysis. You may not be able to perform the exact analyses without the statistician's code, but you should be able to explain why the statistician performed each step to a labmate or your principal investigator. 
 
-\section{Discussion}
-\label{sec:discussion}
+# Discussion 
 
 These guidelines aim to provide guidelines for effective and efficient data sharing between those generating data and those analyzing it. We highlight the need for data generators to (1) provide data in a tidy and consistently coded format, (2) include all the necessary experimental information regarding data generation, and (3) to explain any steps taken to pre-process the data. If followed, these guidelines will both speed up analysis turnaround time and minimize the likelihood of errors during analysis. 
 
 
 
-\section{Funding}
-\label{sec:funding}
+# Funding
 This work was supported by NIH R01 GM105705.
 
 
-\section{Figure legends}
-\label{sec:figlegend}
-
+# Figure Legends
 **Figure 1** -- **A. Raw (and tidy) data.** The raw measurements taken during the experiment are included here for the 40 patients (rows) and 20 hormones (columns) measured. Indicating that these are raw values conveys that no manipulation or computation has been done on the included values.  **B. Tidy data.** These data convey the important clinical information to your statistician for each sample (rows) across a number of variables (columns).  With a single value included in each cell and consistently and informatively named column headers and values, these tidy data can be easily understood and used by your statistician. Importantly, `PatientID` is coded in the exact same way between Hormone_Data_raw.csv and Demographic_Data.csv enabling easy merging by the statistician. **C. Code Book.** Here, all pertinent and detailed information about both the experiment and the data are conveyed to the statistician. This is the place for any extra detail that does not fit into the data generator’s tidy data tables or spreadsheets. **D. Pseudocode.** This includes information about any processing steps taken to get the data into the form in which the statistician is receiving it. 
