--- a/README.tex
+++ b/README.tex
@@ -161,8 +161,7 @@ information you should pass to a statistician:
 For clarity, we will further define each part of the data package
 transferred.
 
-\subsection{The raw data}
-\label{sec:rawdata}
+\subsection{The raw data}\label{the-raw-data}
 
 It is critical that you include the rawest form of the data to which you
 have access. This ensures that data provenance can be maintained
@@ -215,8 +214,7 @@ a very common way to slow down the analysis process, since the analyst
 will often have to do a forensic study of your data to figure out why
 the raw data looks weird.
 
-\subsection{The tidy data set}
-\label{sec:tidydata}
+\subsection{The tidy data set}\label{the-tidy-data-set}
 
 The general principles of tidy data have been laid out by Hadley Wickham
 previously \citep{_tidy_data}. While the paper describes tidy data using
@@ -286,8 +284,7 @@ which includes, but is not limited to, ensuring the correct number of
 columns and rows are present and that column labels are accurate and
 consistent across spreadsheets, is crucial.
 
-\subsection{The code book}
-\label{sec:codebook}
+\subsection{The code book}\label{the-code-book}
 
 For almost any data set, the measurements you calculate will need to be
 described in more detail than you can or should sneak into the
@@ -327,8 +324,7 @@ table would contain columns including \texttt{VariableName},
 \texttt{OtherNotes}. Further columns that provide additional information
 to the statistician should be included. (\textbf{Figure 1C})
 
-\subsubsection{How to code variables}
-\label{sec:codevar}
+\subsubsection{How to code variables}\label{how-to-code-variables}
 
 When you put variables into a spreadsheet there are several main
 categories you will run into depending on their data type
@@ -390,8 +386,7 @@ then this information will not be exported (and will be lost!) when the
 data is exported as raw text. Every piece of data should be encoded as
 actual text that can be exported.
 
-\subsection{The instruction list}
-\label{sec:instruction}
+\subsection{The instruction list}\label{the-instruction-list}
 
 You may have heard this before, but reproducibility is a big deal in
 computational science \citep{peng_reproducible_2011}. To accomplish this
@@ -435,8 +430,8 @@ any software used, and whether you tried it more than once to confirm it
 gave the same results. Ideally, you will run this by a fellow student or
 labmate to confirm that they can obtain the same output file you did.
 
-\section{What you should expect from the analyst}
-\label{sec:expect}
+\section{What you should expect from the
+analyst}\label{what-you-should-expect-from-the-analyst}
 
 When you turn over a properly tidied data set it dramatically decreases
 the workload on the statistician and minimizes the likelihood of errors
@@ -472,8 +467,7 @@ statistician's code, but you should be able to explain why the
 statistician performed each step to a labmate or your principal
 investigator.
 
-\section{Discussion}
-\label{sec:discussion}
+\section{Discussion}\label{discussion}
 
 These guidelines aim to provide guidelines for effective and efficient
 data sharing between those generating data and those analyzing it. We
@@ -484,13 +478,11 @@ taken to pre-process the data. If followed, these guidelines will both
 speed up analysis turnaround time and minimize the likelihood of errors
 during analysis.
 
-\section{Funding}
-\label{sec:funding}
+\section{Funding}\label{funding}
 
 This work was supported by NIH R01 GM105705.
 
-\section{Figure legends}
-\label{sec:figlegend}
+\section{Figure Legends}\label{figure-legends}
 
 \textbf{Figure 1} -- \textbf{A. Raw (and tidy) data.} The raw
 measurements taken during the experiment are included here for the 40
